--- a/index.html
+++ b/index.html
@@ -4,16 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment 2
-    </title>
+    <title>Assignment 2</title>
     <link rel="stylesheet" href=style.css>
 
 </head>
 <body>
-    <h2>NETDIX</h2>
-    <button type="button">Log In`</button>
+    <div class="banner">
+        <div class="navbar">
+            <img src="logo.png" class="logo">
+            <ul>
+                <li><a href="#">Movies</a></li>
+                <li><a href="#">TV shows</a></li>
+                <li><a href="#">Documentaries</a></li>
+                <li><a href="#">Animations</a></li>
+                <li><a href="#">More</a></li>
+            </ul>
 
-    <h1>hi</h1>
+        </div>
+        <div class="content">
+            <h1>Explore Unlimited Options</h1>
+            <p>Enjoy yourself with Family and Friends</p>
+            <div>
+                <button type="button"><span></span>SIGN UP</button>
+                <button type="button"><span></span>SIGN IN</button>
+
+            <div>
+               
+        </div>
+    </div>
+
+    <div>hello</div>
 
 
 </body>
